fixed spacing on screens larger than 1440px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -357,6 +357,12 @@ footer.footer .footer__logo {
     padding-top: 4.375em;
   }
 }
+/* screens larger than 1440px */
+@media (min-width: 90.0625em) {
+  .section__wrapper:nth-of-type(2) {
+    width: 730px;
+  }
+}
 html, body {
   background-color: var(--secondary);
   font-family: var(--ff-body);
